--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ВАШ_ADSENSE_CLIENT_ID"
-      crossOrigin="anonymous"
+      crossorigin="anonymous"
     ></script>
-
   </head>
   <body>
     <div id="root"></div>
